--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
     <!-- Shop -->
     <div class="shop" id="shop"></div>
 
+    <!--Location -->
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5966467749195!2d-99.19967222218807!3d19.430879093277376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d201f879059717%3A0x14b2be7262bfc09a!2sParque%20Lincoln!5e0!3m2!1sen!2smx!4v1699143345159!5m2!1sen!2smx"
+      width="100%"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+
     <!-- Carousel -->
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
