--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <!-- Toastify CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
     <!-- CSS -->
     <link rel="stylesheet" href="src/style.css" />
     <!-- Bootstrap Icons -->
@@ -24,6 +30,12 @@
       defer
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
+    ></script>
+    <!--Toastify JS -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+      defer
     ></script>
     <!-- JavaScript File -->
     <script src="src/data.js" defer></script>
@@ -73,19 +85,56 @@
     <!-- Shop -->
     <div class="shop" id="shop"></div>
 
+    <!-- Carrousel -->
+    <div class="imagenPanditas">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/candy3.avif" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="img/product4.jpeg" class="d-block w-100" alt="..." />
+          </div>
+          <div class="carousel-item">
+            <img src="img/candy4.webp" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
     <!--Location -->
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5966467749195!2d-99.19967222218807!3d19.430879093277376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d201f879059717%3A0x14b2be7262bfc09a!2sParque%20Lincoln!5e0!3m2!1sen!2smx!4v1699143345159!5m2!1sen!2smx"
-      width="100%"
-      height="450"
-      style="border: 0"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"
-    ></iframe>
+    <div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5966467749195!2d-99.19967222218807!3d19.430879093277376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d201f879059717%3A0x14b2be7262bfc09a!2sParque%20Lincoln!5e0!3m2!1sen!2smx!4v1699143345159!5m2!1sen!2smx"
+        width="100%"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
 
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <!-- <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
         <button
           type="button"
@@ -137,6 +186,6 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div>
+    </div> -->
   </body>
 </html>
