add some structure to the cart.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       src="https://cdn.jsdelivr.net/npm/toastify-js"
       defer
     ></script>
-    <!-- JavaScript File -->
+    <!-- JavaScript Files -->
     <script src="src/data.js" defer></script>
     <script src="src/main.js" defer></script>
   </head>
