Add some js logic to the cart.js

--- a/cart.html
+++ b/cart.html
@@ -71,5 +71,11 @@
         </a>
       </div>
     </nav>
+
+    <!-- Total Bill, Checkout and Clear Cart Compononent -->
+    <div id="label" class="text-center"></div>
+
+    <!-- Shopping cart items of cards component -->
+    <div class="shopping-cart" id="shopping-cart"></div>
   </body>
 </html>
