--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Bootstrap NavBar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">PandiStore</a>
+        <a class="navbar-brand" href="index.html">PandiStore</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -60,16 +60,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#shop"
+                >Products</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#AboutUs">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#location">Where to find us?</a>
             </li>
           </ul>
         </div>
@@ -117,8 +116,32 @@
       </div>
     </div>
 
+    <!-- *Hero -->
+    <div id="AboutUs" class="px-4 py-5 my-5 text-center">
+      <img
+        class="d-block mx-auto mb-4"
+        src="img/logo.jpeg"
+        alt="Logo"
+        width="auto"
+        height="200rem"
+      />
+      <h1 class="display-5 fw-bold text-body-emphasis">Sweet Moments</h1>
+      <div class="col-lg-6 mx-auto my-4">
+        <p class="lead mb-4">
+          We use the best ingredients, our original recipes and stringent
+          controls for all of them: quality first!
+        </p>
+        <p class="lead mb-4">
+          Our stringent controls guarantee consistent quality, maintaining the
+          superior standards that define our brand. We meticulously oversee each
+          stage of production, from sourcing to creation, promising a delightful
+          experience with every bite.
+        </p>
+      </div>
+    </div>
+
     <!--Location -->
-    <div>
+    <div id="location">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3367.5966467749195!2d-99.19967222218807!3d19.430879093277376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d201f879059717%3A0x14b2be7262bfc09a!2sParque%20Lincoln!5e0!3m2!1sen!2smx!4v1699143345159!5m2!1sen!2smx"
         width="100%"
